# Jarvis

./: .gitignore  api.py  app.py  app2.py  biz_evalkey  db_operations.py  upload_script.py  utils_streamlit.py
backend/: agent_prompts.py  analytical_model.py  application_state.py  chat_history_management.py  client_kpis.py  dataset_storage_management.py  developer_edu.py  pyproject.toml  requirements.txt  requirements_tentative.txt  research_interests.json  run_db.py  sector_settings.py  setup.py  text_model.py
cloud_scp_reference/: analytical_model.py  api.py  text_model.py
deployed_llms/colpali_cloud/: authenticate.py  get_key.py  main.py  make_post.py  requirements.txt  sample.json  secrets.txt  server_control.py  setup_cloud.sh  vlm_api.py  vlm_model.py
deployed_llms/fine_tuning_llms/: fine_tune_colqwen.py
deployed_llms/n70b/: cog.yaml  predict.py
deployed_llms/paligem3b/: cog.yaml  predict.py
tests/: streaming_fastapi_test.py
tools/: WSAPI_calls.py  agent_toolkit.py  running_utils.py
utils/: chat_history_cleanup.py  test_chat_history_script.py
