[build-system]
requires = ["setuptools>=61.0", "wheel", "pbr>=5.7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customai-backend"
dynamic = ["version"]
description = "CustomAI Backend Services"
requires-python = ">=3.8"
dependencies = [
    # List your dependencies here
]

[tool.setuptools]
packages = ["backend"]  # Adjust based on your package structure 